# OTT-ESPvelocimeter

./: .gitignore  README.md  pyproject.toml
Velocimeter_ESP32/src/: main.cpp
Velocimeter_app/: TCP_serverlisten.py  Velocimeter_app.py  Velocimeter_app.ui  main.py
calibration/: calibrate_propeller.ipynb  generate_synthetic_data.ipynb
calibration/synthetic_data_test1/: Calibration_IMP1_Synthetic_0_3_mps.txt  Calibration_IMP1_Synthetic_0_6_mps.txt  Calibration_IMP1_Synthetic_0_9_mps.txt  Calibration_IMP1_Synthetic_1_2_mps.txt  Calibration_IMP1_Synthetic_1_5_mps.txt
calibrationfiles/: calibration_IMP1_Synthetic.json  calibration_IMP1_Synthetic_poly2.json  calibration_IMP_1.json  calibration_example.json
