[project]
name = "ott-espvelocimeter"
version = "0.1.0"
description = "OTT moulinette ESP32 velocimeter desktop application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyqt6==6.7.1",
    "pyqtgraph>=0.14.0",
    "pyserial>=3.5",
    "scipy>=1.17.1",
]
